# python-volkszaehler

./: CHANGES.rst  README.rst  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  python-package.yml
tests/: __init__.py  test_volkszaehler.py
volkszaehler/: __init__.py  exceptions.py
