[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volkszaehler"
version = "0.6.0"
description = "Python Wrapper for interacting with the Volkszahler API."
readme = "README.rst"
license = "MIT"
authors = [
  { name = "Fabian Affolter", email = "fabian@affolter-engineering.ch" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
]

requires-python = ">=3.13"

dependencies = [
  "aiohttp>=3.8.4,<4",
]

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-asyncio>=0.21",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=9",
  "pytest-asyncio>=0.21",
  "aiohttp>=3.8.4,<4"
]
[tool.hatch.envs.test.scripts]
run = "pytest"

[project.urls]
Homepage = "https://github.com/home-assistant-ecosystem/python-volkszaehler"
Download = "https://github.com/home-assistant-ecosystem/python-volkszaehler/releases"
